File cleanup, fix resume link, fix responsiveness on small displays

--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,12 @@ body {
 	background-color: #151E1D;
 	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	color: #474747;
+	margin: 0;
 
 }
 
 .container {
-	margin: 30px;
+	margin: 40px;
 	display: inline-block;
 	overflow: hidden;
 }
@@ -32,7 +33,7 @@ ul {
 }
 
 .work a, .footer a {
-	font-size: 1.1em;
+	font-size: 18px;
 }
 
 li {
@@ -49,21 +50,36 @@ li {
 	text-decoration: none;
 }
 
-@media screen and (max-width: 650px) {
-	
+@media only screen and (max-width: 750px) {	
+
+
+
 	.header h1 {
-		font-size: 1.3em;
+		font-size: 18px;
 	}
 
 	.work a, .footer a {
-		font-size: 0.9em;
+		font-size: 14px;
+	}
+}
+
+
+@media only screen and (max-width: 640px) {	
+	.container {
+		margin-top: 20px;
 	}
 
+	.header h1 {
+		font-size: 18px;
+	}
+
+	.work a, .footer a {
+		font-size: 12px;
+	}
 }
 
 /* fix footer clipping */
-@media screen and (max-height: 480px) {
-	
+@media only screen and (max-height: 480px) {
 	.footer {
 		position: relative;
 		bottom: auto;
@@ -71,12 +87,12 @@ li {
 
 	.footer ul li {
 		display: inline;
-		margin-right: 20px;
+		margin-right: 10px;
 	}
 }
 
 /* scale up text for 2x and 3x displays */
-@media	only screen and (-webkit-min-device-pixel-ratio: 1.3),
+/*@media only screen and (-webkit-min-device-pixel-ratio: 1.3),
 	only screen and (-o-min-device-pixel-ratio: 13/10),
 	only screen and (min-resolution: 120dpi)
 	{
@@ -89,3 +105,4 @@ li {
 			line-height: 200%;
 		}
 	}
+*/
